<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/navi_bar"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dp"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:contentDescription="@string/titlabar_logo"
            app:srcCompat="@drawable/titlebar_logo" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="75dp"
            android:background="@color/app_backgound"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/getJob"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                android:background="@drawable/getjob_logo"
                android:button="@null"
                android:contentDescription="@string/emplyee_logo"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <View
                android:layout_width="5dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="@android:color/black" />

            <RadioButton
                android:id="@+id/postJob"
                android:layout_marginBottom="40dp"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/postjob_logo"
                android:button="@null"
                android:contentDescription="@string/company_logo" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>