<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="183dp"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:contentDescription="@string/titlabar_logo"
            app:srcCompat="@drawable/titlebar_logo" />


        <LinearLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextField"
                    android:layout_width="250dp"
                    android:layout_marginLeft="25dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/keyword_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="350dp"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    app:icon="@drawable/search_icon"
                    android:textColor="#000000"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_marginStart="20dp"
                    android:text="@string/filter_button" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <include
                android:id="@+id/applyButton"
                layout="@layout/job_card" />
            <include layout="@layout/job_card"/>
            <include layout="@layout/job_card"/>
            <include layout="@layout/job_card"/>


        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>