<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="170dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:contentDescription="@string/titlabar_logo"
            android:src="@drawable/titlebar_logo" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="76dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="signin"
            app:srcCompat="@drawable/login"
             />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:counterEnabled="true"
            app:counterMaxLength="18"
            app:endIconMode="clear_text"
            app:helperText="Required"
            app:helperTextTextColor="#FF0000"
            app:placeholderText="abc@abc.com"
            android:hint="@string/emailid"
            app:startIconCheckable="false"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textWebEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            app:helperText="enter strong password"
            app:helperTextTextColor="#EB21B65D"
            android:hint="@string/password"
            app:startIconCheckable="false"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/postJobButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/sign_text"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="new User!   "
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <Button
            android:id="@+id/textButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Sign with Google"
            app:icon="@drawable/ic_google_icon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>